--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="./src/assets/images/logo/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   </head>
-  <body class="bg-[#FFFAEC]">
+  <body class="">
     <div id="root"></div>
     <script>
       AOS.init();
